# EchoHand

./: .gitignore  BOM.md  CONTRIBUTIONS.md  README.md
CAD/: Button Ring2.f3d  Button rig 3.f3d  Button rig 3.step  Button rig 3.stl  EchoHand_circuit_case.20260303-173438.FCBak  EchoHand_circuit_case_v3.FCStd  EchoHand_circuit_case_v4.20260420-065136.FCBak  EchoHand_circuit_case_v4.20260421-213858.FCBak  EchoHand_circuit_case_v4.FCStd  Joystick Rig pt3_.f3d  Joystick Rig pt3_.step  Joystick Rig pt3_.stl  Joystick Rig pt4_.f3d  JoystickRingM1.f3d  JoystickRingM1.stl  case_v2.stl  echohand_box_FINAL.20260220-041210.FCBak  echohand_box_FINAL.20260224-092543.FCBak  echohand_box_FINAL.FCStd  topcover_solid.stl
EchoHand_Firmware/: Bluetooth_task.cpp  Bluetooth_task.h  CMakeLists.txt  EchoHand_Firmware.ino  InternalSystem.cpp  PersistentState.h  config.h  diagram.json  sdkconfig  wokwi.toml
EchoHand_Firmware/main/: AnalogRead_task.cpp  AnalogRead_task.h  Bluetooth_task.cpp  Bluetooth_task.h  CMakeLists.txt  Communication_task.cpp  Communication_task.h  DataBroker.h  DataBrokerPrint.cpp  DataBrokerPrint_task.h  PersistentState.h  SerialCommunication_task.cpp  SerialCommunication_task.h  ServoControl_task.cpp  ServoControl_task.h  WifiCommuncation.cpp  WifiCommuncation.h  config.h  main.cpp
EchoHand_Receiver_Firmware/: CMakeLists.txt
EchoHand_Simulator/: Makefile  README.md
Milestones/: Design Draft.docx
Schematics/: echo_hand.kicad_prl  echo_hand.kicad_pro  echo_hand.kicad_sch
Testing/: bluetooth_stress.txt  bluetooth_stress_test.py  payload_integrity.py  (+2 more)
(+19 files in other folders)
